Ticket #28336: Re-introduced custom confirmation.
Using default instances with configuration options leads to problems,
when editing them in the layout editor.

--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -7781,10 +7781,6 @@ com.top_logic.tool.boundsec.CommandHandler.Config.resourceKey = Beschriftung
 com.top_logic.tool.boundsec.CommandHandler.Config.resourceKey.tooltip = Die internationalisierte Befehlsbezeichnung.
 com.top_logic.tool.boundsec.CommandHandler.ConfigBase.collapsedTitle = Titel im eingeklappten Zustand
 com.top_logic.tool.boundsec.CommandHandler.ConfigBase.collapsedTitle.tooltip = Der Titel, der für eine eingeklappte <i>Befehlshandler-Konfiguration</i> angezeigt wird.
-com.top_logic.tool.boundsec.CommandHandler.ConfirmConfig.confirm = Mit Bestätigung
-com.top_logic.tool.boundsec.CommandHandler.ConfirmConfig.confirm.tooltip = Ob der Benutzer zur Bestätigung aufgefordert wird, bevor der Befehl tatsächlich ausgeführt wird.
-com.top_logic.tool.boundsec.CommandHandler.ConfirmConfig.confirmMessage = Bestätigungsmeldung
-com.top_logic.tool.boundsec.CommandHandler.ConfirmConfig.confirmMessage.tooltip = Die Meldung, die dem Benutzer angezeigt werden soll, um zu bestätigen, dass der Befehl wirklich ausgeführt werden soll. <p> Die Meldung kann sich über den Platzhalter <code>{0}</code> </p> auf das Zielmodell des Befehls beziehen. <p> Die Meldung wird nur angezeigt, wenn <i>Confirm</i> gesetzt ist. Wenn kein Wert gesetzt ist, aber <i>Confirm</i> markiert ist, wird eine generische Bestätigungsmeldung angezeigt.</p>
 com.top_logic.tool.boundsec.CommandHandler.ConfirmConfig.confirmation = Bestätigung
 com.top_logic.tool.boundsec.CommandHandler.ConfirmConfig.confirmation.tooltip = Der Algorithmus zur Berechnung einer Bestätigungsmeldung, bevor ein Befehl ausgeführt wird. <p> Wenn die berechnete Bestätigungsmeldung <code>null</code> ist, wird keine Bestätigung angezeigt. </p>
 com.top_logic.tool.boundsec.CommandHandler.Display.COMMANDS = Befehle
@@ -8053,10 +8049,14 @@ com.top_logic.tool.boundsec.compound.gui.admin.rolesProfile.SecurityConfig.profi
 com.top_logic.tool.boundsec.compound.gui.admin.rolesProfile.SecurityConfig.tooltip = <i>Konfigurationselement</i> für die textuelle Persistenz der <i>Rollenprofil-Handler-Profile</i>, wie in der <i>Komponente Berechtigungsprofil bearbeiten</i> konfiguriert.
 com.top_logic.tool.boundsec.conditional.PreconditionCommandHandler = Vorbedingung Befehlshandler
 com.top_logic.tool.boundsec.conditional.PreconditionCommandHandler.tooltip = <i>Befehlshandler</i>, der nur ausgeführt werden kann, wenn einige interne Vorbedingungen gegeben sind.
+com.top_logic.tool.boundsec.confirm.CustomConfirmation = Benutzerdefinierte Bestätigung
+com.top_logic.tool.boundsec.confirm.CustomConfirmation.Config.confirmMessage = Bestätigungsnachricht
+com.top_logic.tool.boundsec.confirm.CustomConfirmation.Config.confirmMessage.tooltip = Die Nachricht, die dem Benutzer angezeigt werden soll, um zu bestätigen, dass der Befehl wirklich ausgeführt werden soll. <p> Die Nachricht kann sich auf das Zielmodell des Befehls beziehen, indem der Platzhalter <code>{0}</code> verwendet wird. </p> <p> Wird keine Nachricht angegeben, wird eine Standardbestätigungsnachricht angezeigt. </p>
+com.top_logic.tool.boundsec.confirm.CustomConfirmation.tooltip = <i>Eine Befehlsbestätigung</i>, die mit einer Nachricht versehen werden kann, die angezeigt wird.
 com.top_logic.tool.boundsec.confirm.DefaultConfirmation = Standard-Bestätigung
-com.top_logic.tool.boundsec.confirm.DefaultConfirmation.Config.confirmMessage = Bestätigungsnachricht
-com.top_logic.tool.boundsec.confirm.DefaultConfirmation.Config.confirmMessage.tooltip = Die Nachricht, die dem Benutzer angezeigt werden soll, um zu bestätigen, dass der Befehl wirklich ausgeführt werden soll. <p> Die Nachricht kann sich auf das Zielmodell des Befehls beziehen, indem der Platzhalter <code>{0}</code> verwendet wird. </p> <p> Wird keine Nachricht angegeben, wird eine Standardbestätigungsnachricht angezeigt. </p>
-com.top_logic.tool.boundsec.confirm.DefaultConfirmation.tooltip = <i>Befehlsbestätigung</i> mit einer benutzerdefinierten Nachricht.
+com.top_logic.tool.boundsec.confirm.DefaultConfirmation.tooltip = <i>Befehlsbestätigung</i>, die eine generische Bestätigungsmeldung anzeigt.
+com.top_logic.tool.boundsec.confirm.DefaultDeleteConfirmation = Standard-Löschbestätigung
+com.top_logic.tool.boundsec.confirm.DefaultDeleteConfirmation.tooltip = Zeigt eine generische Bestätigungsmeldung für einen Löschbefehl an.
 com.top_logic.tool.boundsec.confirm.ScriptedConfirmation = Skriptgesteuerte Bestätigung
 com.top_logic.tool.boundsec.confirm.ScriptedConfirmation.Config.function = Funktion
 com.top_logic.tool.boundsec.confirm.ScriptedConfirmation.Config.function.tooltip = Eine Funktion, die die angegebene Nachricht mit Argumenten füllt. <p> Die Funktion kann auch beschließen, unter bestimmten Bedingungen keine Bestätigungsmethode zurückzugeben. </p> <p> Die folgenden Argumente können verwendet werden: <code>message -> model -> command -> ...</code> </p> <ul> <li>Die statische Nachricht mit den oben konfigurierten Platzhaltern. <li>Das Zielmodell des auszuführenden Befehls. <li>Die Bezeichnung des auszuführenden Befehls. </ul>
