--- a/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
@@ -3,6 +3,7 @@ class.com.top_logic.model.search.configured.I18NConstants.ERROR_RESOLVING_SCRIPT
 class.com.top_logic.model.search.expr.I18NConstants.ENCODING_FAILED__MSG_EXPR = Kodierung des Wertes von Ausdruck {1} fehlgeschlagen: {0}
 class.com.top_logic.model.search.expr.I18NConstants.ERROR_NOT_A_BINARY_VALUE__VAL_EXPR = Der Wert "{0}" ist kein binärer Datenwert in {1}.
 class.com.top_logic.model.search.expr.I18NConstants.ERROR_NOT_A_TYPE__VAL_EXPR = Der Wert "{0}" ist kein Typ im Ausdruck: {1}
+class.com.top_logic.model.search.expr.I18NConstants.PERMISSION_DENIED__NAME = Operation im interaktiven Kontext für Nicht-Admin-Benutzer nicht erlaubt: {0}
 class.com.top_logic.model.search.expr.config.operations.I18NConstants.ERROR_AMBIGUOUS_ARGUMENT__FUN_NAME = Ein Argument darf in einem Funktionsaufruf nur einmal definiert werden. Das Argument "{1}" der Funktion "{0}" ist mehr als einmal definiert.
 class.com.top_logic.model.search.expr.config.operations.I18NConstants.ERROR_INVALID_NAMED_ARGUMENT_ORDER__FUN = Positionale Argumente dürfen nur am Anfang der Argumentliste beim Aufruf der Funktion "{0}" stehen.
 class.com.top_logic.model.search.expr.config.operations.I18NConstants.ERROR_MANDATORY_ARGUMENT__ARG_EXPR = Das Argument "{0}" ist im Ausdruck "{1}" obligatorisch.
