--- a/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
@@ -3,6 +3,7 @@ class.com.top_logic.model.search.configured.I18NConstants.ERROR_RESOLVING_SCRIPT
 class.com.top_logic.model.search.expr.I18NConstants.ENCODING_FAILED__MSG_EXPR = Encoding value of expression {1} failed: {0}
 class.com.top_logic.model.search.expr.I18NConstants.ERROR_NOT_A_BINARY_VALUE__VAL_EXPR = The value "{0}" is not a binary data value in {1}.
 class.com.top_logic.model.search.expr.I18NConstants.ERROR_NOT_A_TYPE__VAL_EXPR = The value "{0}" is not a type in expression: {1}
+class.com.top_logic.model.search.expr.I18NConstants.PERMISSION_DENIED__NAME = Operation not allowed in interactive context for non-admin users: {0}
 class.com.top_logic.model.search.expr.config.operations.I18NConstants.ERROR_AMBIGUOUS_ARGUMENT__FUN_NAME = An argument must only be defined once in a function call. Argument "{1}" of function "{0}" is defined more than once.
 class.com.top_logic.model.search.expr.config.operations.I18NConstants.ERROR_INVALID_NAMED_ARGUMENT_ORDER__FUN = Positional arguments may occur only at the beginning of the arguments list in call to function "{0}".
 class.com.top_logic.model.search.expr.config.operations.I18NConstants.ERROR_MANDATORY_ARGUMENT__ARG_EXPR = The argument "{0}" is mandatory in expression "{1}".
