--- a/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
@@ -1141,11 +1141,12 @@ com.top_logic.model.search.providers.TreeTableDragSourceByExpression = Baumtabel
 com.top_logic.model.search.providers.TreeTableDragSourceByExpression.tooltip = <i>Tabellen Drag-Quelle</i> für Baumtabellen in TL-Script.
 com.top_logic.model.search.providers.TreeTableDropTargetByExpression = Baumtabellen Drop-Ziel in TL-Script
 com.top_logic.model.search.providers.TreeTableDropTargetByExpression.tooltip = <i>Tabellenablageziel</i> für Baumtabellen, die vollständig über Modellabfragen konfiguriert werden können.
-com.top_logic.model.search.providers.UrlProviderByExpression = URL-Berechnung durch Ausdruck
+com.top_logic.model.search.providers.UrlProviderByExpression = TL-Script URL-Berechnung
 com.top_logic.model.search.providers.UrlProviderByExpression.Config.model = Modell
 com.top_logic.model.search.providers.UrlProviderByExpression.Config.model.tooltip = Der Komponenten-Kanal, von dem das Argument für die URL-Erstellung genommen wird.
 com.top_logic.model.search.providers.UrlProviderByExpression.Config.url = URL
 com.top_logic.model.search.providers.UrlProviderByExpression.Config.url.tooltip = Funktion, die die zu öffnende URL konstruiert. <p> Die Funktion erhält entweder den Wert der Komponente channel oder das Kontextmodell, wenn kein anderes Modell als Argument angegeben wurde. </p>
+com.top_logic.model.search.providers.UrlProviderByExpression.tooltip = TL-Script-Plugin zum Berechnen einer URL für einen Objektkontext.
 com.top_logic.model.search.providers.ValueListenerByExpression = Wertelistener mit TL-Script
 com.top_logic.model.search.providers.ValueListenerByExpression.Config.operation = Operation
 com.top_logic.model.search.providers.ValueListenerByExpression.Config.operation.tooltip = TL-Script, das ausgeführt wird, wenn sich der Wert des Feldes für das annotierte Attribut ändert. <p> Die Operation erhält vier Argumente: das Objekt, den neuen Feldwert, den alten Feldwert und das annotierte Attribut. </p>
@@ -1156,11 +1157,6 @@ com.top_logic.model.search.providers.ValueTransformationByExpression.Config.adit
 com.top_logic.model.search.providers.ValueTransformationByExpression.Config.function = Funktion
 com.top_logic.model.search.providers.ValueTransformationByExpression.Config.function.tooltip = Die Transformation, die auf den Eingabewert und eventuell gegebene zusätzliche Argumente anzuwenden ist. <p> Die Funktion erhält den Wert der Eingabe als erstes Argument und für jedes konfigurierte zusätzliche Argument einen weiteren Wert. </p>
 com.top_logic.model.search.providers.ValueTransformationByExpression.tooltip = <i>Wertetransformation</i>, die in TL-Script implementiert werden kann. <p> Die Transformation kann zusätzliche Argumente von konfigurierten Komponenten-Kanälen erhalten. </p>
-com.top_logic.model.search.providers.UrlProviderByExpression = URL-Berechnung in TL-Script
-com.top_logic.model.search.providers.UrlProviderByExpression.Config.model = Modell
-com.top_logic.model.search.providers.UrlProviderByExpression.Config.model.tooltip = Der Komponenten-Kanal, von dem das Argument für die URL-Erstellung genommen wird.
-com.top_logic.model.search.providers.UrlProviderByExpression.Config.url = URL
-com.top_logic.model.search.providers.UrlProviderByExpression.Config.url.tooltip = Funktion, die die zu öffnende URL konstruiert. <p> Die Funktion erhält entweder den Wert der Komponente channel oder das Kontextmodell, wenn kein anderes Modell als Argument angegeben wurde. </p>
 com.top_logic.model.search.providers.toggle.ChannelStateHandler = Komponente-Kanal-Zustand
 com.top_logic.model.search.providers.toggle.ChannelStateHandler.Config.state-channel = Status-Kanal
 com.top_logic.model.search.providers.toggle.ChannelStateHandler.Config.state-channel.tooltip = Der Komponenten-Kanal, von dem die Schaltflächenzustände übernommen und in dem die Zustandsaktualisierungen gespeichert werden sollen.
