--- a/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
@@ -1141,11 +1141,12 @@ com.top_logic.model.search.providers.TreeTableDragSourceByExpression = Tree tabl
 com.top_logic.model.search.providers.TreeTableDragSourceByExpression.tooltip = <i>Table drag source by expression</i> for tree tables.
 com.top_logic.model.search.providers.TreeTableDropTargetByExpression = Tree table drop target by expression
 com.top_logic.model.search.providers.TreeTableDropTargetByExpression.tooltip = <i>Table drop target</i> for tree tables that can be completely configured using model queries.
-com.top_logic.model.search.providers.UrlProviderByExpression = URL provider by expression
+com.top_logic.model.search.providers.UrlProviderByExpression = TL-Script URL computation
 com.top_logic.model.search.providers.UrlProviderByExpression.Config.model = Model
 com.top_logic.model.search.providers.UrlProviderByExpression.Config.model.tooltip = The component channel to take the argument for the URL creation from.
 com.top_logic.model.search.providers.UrlProviderByExpression.Config.url = URL
 com.top_logic.model.search.providers.UrlProviderByExpression.Config.url.tooltip = Function constructing the URL to open. <p> The function receives either the value of the component channel, or the context model if no other model was specified as argument. </p>
+com.top_logic.model.search.providers.UrlProviderByExpression.tooltip = TL-Script plug-in to compute a URL for some object context.
 com.top_logic.model.search.providers.ValueListenerByExpression = Value listener with TL-Script
 com.top_logic.model.search.providers.ValueListenerByExpression.Config.operation = Operation
 com.top_logic.model.search.providers.ValueListenerByExpression.Config.operation.tooltip = TL-Script that is executed when the value of the field for the annotated attribute changes. <p> The operation gets four arguments: the object, the new field value, the old field value, and the annotated attribute. </p>
@@ -1156,11 +1157,6 @@ com.top_logic.model.search.providers.ValueTransformationByExpression.Config.adit
 com.top_logic.model.search.providers.ValueTransformationByExpression.Config.function = Function
 com.top_logic.model.search.providers.ValueTransformationByExpression.Config.function.tooltip = The transformation to apply to the input value and potentially given additional arguments. <p> The function receives the value of the input as first argument and for each configured additional argument another value. </p>
 com.top_logic.model.search.providers.ValueTransformationByExpression.tooltip = <i>Value transformation</i> that can be implemented in TL-Script. <p> The transformation can receive additional arguments from configured component channels. </p>
-com.top_logic.model.search.providers.UrlProviderByExpression = URL provider by expression
-com.top_logic.model.search.providers.UrlProviderByExpression.Config.model = Model
-com.top_logic.model.search.providers.UrlProviderByExpression.Config.model.tooltip = The component channel to take the argument for the URL creation from.
-com.top_logic.model.search.providers.UrlProviderByExpression.Config.url = URL
-com.top_logic.model.search.providers.UrlProviderByExpression.Config.url.tooltip = Function constructing the URL to open. <p> The function receives either the value of the component channel, or the context model if no other model was specified as argument. </p>
 com.top_logic.model.search.providers.toggle.ChannelStateHandler = Component channel state
 com.top_logic.model.search.providers.toggle.ChannelStateHandler.Config.state-channel = State channel
 com.top_logic.model.search.providers.toggle.ChannelStateHandler.Config.state-channel.tooltip = The component channel to take button states from and to store state updates to.
