--- a/com.top_logic.bpe/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.bpe/src/main/java/META-INF/messages_de.properties
@@ -1,5 +1,7 @@
+class.com.top_logic.bpe.execution.engine.I18NConstants.ERROR_IMPORT_FAILED = Der Import ist fehlgeschlagen.
+class.com.top_logic.bpe.execution.engine.I18NConstants.ERROR_IMPORT_FAILED__DETAILS = Import fehlgeschlagen: {0}
 class.com.top_logic.bpe.layout.execution.I18NConstants.CANNOT_EDIT_TASK = Die aktuelle Aufgabe ist als nicht editierbar gekennzeichnet.
-class.com.top_logic.bpe.layout.execution.I18NConstants.FINISH_TASK_ACCESS_DENIED = Sie sind nicht für diese Bearbeitung autorisiert.
+class.com.top_logic.bpe.layout.execution.I18NConstants.FINISH_TASK_ACCESS_DENIED = Sie sind für diese Bearbeitung nicht berechtigt.
 class.com.top_logic.bpe.layout.execution.I18NConstants.FINISH_TASK_DISABLED = Das Formular enthält ungültige Werte.
 class.com.top_logic.bpe.layout.execution.I18NConstants.NO_DISPLAY_DESCRIPTION__WF = Für den Prozess{0}" ist kein Formular definiert.
 class.com.top_logic.bpe.layout.execution.command.I18NConstants.CONFIRM_FINISH_TASK = Sind Sie sicher, dass Sie die Aufgabe erledigen wollen?
