--- a/com.top_logic/src/main/webapp/WEB-INF/conf/resources/Messages_de.properties
+++ b/com.top_logic/src/main/webapp/WEB-INF/conf/resources/Messages_de.properties
@@ -991,6 +991,8 @@ class.com.top_logic.layout.editor.I18NConstants.DYNAMIC_COMPONENT.com.top_logic.
 class.com.top_logic.layout.editor.I18NConstants.DYNAMIC_COMPONENT.com.top_logic.table.template.properties.modelBuilder = Zeilen
 class.com.top_logic.layout.editor.I18NConstants.DYNAMIC_COMPONENT.com.top_logic.table.template.properties.multiSelection = Multiselektion
 class.com.top_logic.layout.editor.I18NConstants.DYNAMIC_COMPONENT.com.top_logic.table.template.properties.name = Name
+class.com.top_logic.layout.editor.I18NConstants.DYNAMIC_COMPONENT.com.top_logic.table.template.properties.resetInvisible = Tabelle automatisch zurücksetzen
+class.com.top_logic.layout.editor.I18NConstants.DYNAMIC_COMPONENT.com.top_logic.table.template.properties.resetInvisible.tooltip = Die Tabelle wird zurückgesetzt sobald die Komponente nicht mehr sichtbar ist.
 class.com.top_logic.layout.editor.I18NConstants.DYNAMIC_COMPONENT.com.top_logic.table.template.properties.objectType = Listenelementtyp
 class.com.top_logic.layout.editor.I18NConstants.DYNAMIC_COMPONENT.com.top_logic.table.template.properties.securityProviderClass = Zugriffssteuerung
 class.com.top_logic.layout.editor.I18NConstants.DYNAMIC_COMPONENT.com.top_logic.table.template.properties.securityProviderClass.tooltip = Objekt auf dem die Sicherheit geprüft wird
