Ticket #24649: Fixed default border properties.

--- a/com.top_logic.graphic.blocks/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.graphic.blocks/src/main/java/META-INF/messages_de.properties
@@ -50,6 +50,8 @@ com.top_logic.graphic.flow.data.Widget.TypeKind.ALIGN = Ausrichten
 com.top_logic.graphic.flow.data.Widget.TypeKind.ALIGN.tooltip = Geben Sie ein Literal für <i>align</i> ein.
 com.top_logic.graphic.flow.data.Widget.TypeKind.BORDER = Grenze
 com.top_logic.graphic.flow.data.Widget.TypeKind.BORDER.tooltip = Schriftzeichen für <i>Rahmen</i>.
+com.top_logic.graphic.flow.data.Widget.TypeKind.COMPASS_LAYOUT = Kompass-Layout
+com.top_logic.graphic.flow.data.Widget.TypeKind.COMPASS_LAYOUT.tooltip = Geben Sie ein Literal für das <i>Kompass-Layout</i> ein.
 com.top_logic.graphic.flow.data.Widget.TypeKind.EMPTY = Leere
 com.top_logic.graphic.flow.data.Widget.TypeKind.EMPTY.tooltip = Typ literal für <i>leer</i>.
 com.top_logic.graphic.flow.data.Widget.TypeKind.FILL = Füllen Sie
@@ -66,48 +68,6 @@ com.top_logic.graphic.flow.data.Widget.TypeKind.TEXT = Text
 com.top_logic.graphic.flow.data.Widget.TypeKind.TEXT.tooltip = Geben Sie ein Literal für <i>Text</i> ein.
 com.top_logic.graphic.flow.data.Widget.TypeKind.VERTICAL_LAYOUT = Vertikales Layout
 com.top_logic.graphic.flow.data.Widget.TypeKind.VERTICAL_LAYOUT.tooltip = Wörtlich für <i>vertikales Layout</i> eingeben.
-com.top_logic.graphic.flow.param.HAlign = H ausrichten
-com.top_logic.graphic.flow.param.HAlign.CENTER = Zentrum
-com.top_logic.graphic.flow.param.HAlign.LEFT = Links
-com.top_logic.graphic.flow.param.HAlign.RIGHT = Rechts
-com.top_logic.graphic.flow.param.HAlign.STRETCH = Dehnen
-com.top_logic.graphic.flow.param.ImageAlign = Bild ausrichten
-com.top_logic.graphic.flow.param.ImageAlign.none = Keine
-com.top_logic.graphic.flow.param.ImageAlign.none.tooltip = Erzwingt keine einheitliche Skalierung. Skaliert den grafischen Inhalt des angegebenen Elements bei Bedarf ungleichmäßig, so dass die Bounding Box des Elements genau dem Rechteck des Ansichtsfensters entspricht. Beachten Sie, dass der optionale Wert <code>meetOrSlice</code> ignoriert wird, wenn <code>align</code> kein Wert ist.
-com.top_logic.graphic.flow.param.ImageAlign.tooltip = Der Ausrichtungswert gibt an, ob eine einheitliche Skalierung erzwungen werden soll und wenn ja, welche Ausrichtungsmethode verwendet werden soll, falls das Seitenverhältnis der viewBox nicht mit dem Seitenverhältnis des Viewports übereinstimmt. xMidYMid ist der Standardwert.
-com.top_logic.graphic.flow.param.ImageAlign.xMaxYMax = X Maximum Y Maximum
-com.top_logic.graphic.flow.param.ImageAlign.xMaxYMax.tooltip = Erzwingt eine einheitliche Skalierung. Richtet die <code>width</code> der viewBox des Elements am maximalen X-Wert des Ansichtsfensters aus. Richten Sie die <code>height</code> der viewBox des Elements am maximalen Y-Wert des Ansichtsfensters aus.
-com.top_logic.graphic.flow.param.ImageAlign.xMaxYMid = X maximal Y mittel
-com.top_logic.graphic.flow.param.ImageAlign.xMaxYMid.tooltip = Erzwingt eine einheitliche Skalierung. Richtet die <code>width</code> der viewBox des Elements am maximalen X-Wert des Ansichtsfensters aus. Richten Sie den mittleren Y-Wert der ViewBox des Elements am mittleren Y-Wert des Ansichtsfensters aus.
-com.top_logic.graphic.flow.param.ImageAlign.xMaxYMin = X Maximum Y Minimum
-com.top_logic.graphic.flow.param.ImageAlign.xMaxYMin.tooltip = Erzwingt eine einheitliche Skalierung. Richtet die <code>width</code> der viewBox des Elements am maximalen X-Wert des Ansichtsfensters aus. Richten Sie die <code>min-y</code> der viewBox des Elements am kleinsten Y-Wert des Ansichtsfensters aus.
-com.top_logic.graphic.flow.param.ImageAlign.xMidYMax = X Mitte Y Maximum
-com.top_logic.graphic.flow.param.ImageAlign.xMidYMax.tooltip = Erzwingt eine einheitliche Skalierung. Richtet den mittleren X-Wert der viewBox des Elements am mittleren X-Wert des Ansichtsfensters aus. Richten Sie die <code>height</code> der viewBox des Elements am maximalen Y-Wert des Ansichtsfensters aus.
-com.top_logic.graphic.flow.param.ImageAlign.xMidYMid = X Mitte Y Mitte
-com.top_logic.graphic.flow.param.ImageAlign.xMidYMid.tooltip = Erzwingt eine einheitliche Skalierung. Richtet den X-Mittelpunkt der viewBox des Elements am X-Mittelpunkt des Ansichtsfensters aus. Richten Sie den Y-Mittelpunkt der ViewBox des Elements am Y-Mittelpunkt des Ansichtsfensters aus. Dies ist der Standardwert.
-com.top_logic.graphic.flow.param.ImageAlign.xMidYMin = X Mitte Y Minimum
-com.top_logic.graphic.flow.param.ImageAlign.xMidYMin.tooltip = Erzwingt eine einheitliche Skalierung. Richtet den mittleren X-Wert der viewBox des Elements am mittleren X-Wert des Ansichtsfensters aus. Richten Sie den <code>min-y</code> der ViewBox des Elements am kleinsten Y-Wert des Ansichtsfensters aus.
-com.top_logic.graphic.flow.param.ImageAlign.xMinYMax = X Minimum Y Maximum
-com.top_logic.graphic.flow.param.ImageAlign.xMinYMax.tooltip = Erzwingt eine einheitliche Skalierung. Richtet die <code>min-x</code> der viewBox des Elements am kleinsten X-Wert des Ansichtsfensters aus. Richten Sie die <code>height</code> der viewBox des Elements am maximalen Y-Wert des Ansichtsfensters aus.
-com.top_logic.graphic.flow.param.ImageAlign.xMinYMid = X minimal Y mittel
-com.top_logic.graphic.flow.param.ImageAlign.xMinYMid.tooltip = Erzwingt eine einheitliche Skalierung. Richtet die <code>min-x</code> der viewBox des Elements am kleinsten X-Wert des Ansichtsfensters aus. Richten Sie den mittleren Y-Wert der ViewBox des Elements am mittleren Y-Wert des Ansichtsfensters aus.
-com.top_logic.graphic.flow.param.ImageAlign.xMinYMin = X Minimum Y Minimum
-com.top_logic.graphic.flow.param.ImageAlign.xMinYMin.tooltip = Erzwingt eine einheitliche Skalierung. Richtet die <code>min-x</code> der viewBox des Elements am kleinsten X-Wert des Ansichtsfensters aus. Richten Sie die <code>min-y</code> der viewBox des Elements am kleinsten Y-Wert des Ansichtsfensters aus.
-com.top_logic.graphic.flow.param.ImageScale = Bildmaßstab
-com.top_logic.graphic.flow.param.ImageScale.meet = Treffen Sie
-com.top_logic.graphic.flow.param.ImageScale.meet.tooltip = Skaliert die Grafik so, dass: <ul> <li>Das Seitenverhältnis bleibt erhalten.</li> <li>Die gesamte viewBox ist innerhalb des Ansichtsfensters sichtbar.</li> <li>Die viewBox wird so weit wie möglich skaliert, wobei die anderen Kriterien weiterhin erfüllt werden.</li> </ul> <p> Wenn in diesem Fall das Seitenverhältnis der Grafik nicht mit dem Ansichtsfenster übereinstimmt, erstreckt sich ein Teil des Ansichtsfensters über die Grenzen der viewBox hinaus (d. h. der Bereich, in den die viewBox gezeichnet wird, ist kleiner als das Ansichtsfenster). meet </p>
-com.top_logic.graphic.flow.param.ImageScale.slice = Slice
-com.top_logic.graphic.flow.param.ImageScale.slice.tooltip = Skaliert die Grafik so, dass: <ul> <li>Das Seitenverhältnis wird beibehalten.</li> <li>Das gesamte Ansichtsfenster wird von der viewBox abgedeckt.</li> <li>Die viewBox wird so weit wie möglich verkleinert, wobei die anderen Kriterien weiterhin erfüllt werden.</li> </ul> <p> Wenn in diesem Fall das Seitenverhältnis der viewBox nicht mit dem Ansichtsfenster übereinstimmt, ragt ein Teil der viewBox über die Grenzen des Ansichtsfensters hinaus (d. h. der Bereich, in den die viewBox gezeichnet wird, ist größer als das Ansichtsfenster). slice </p>
-com.top_logic.graphic.flow.param.ImageScale.tooltip = Steuert, wie ein Bild nach der Ausrichtung skaliert werden soll.
 com.top_logic.graphic.flow.param.Orientation = Orientierung
 com.top_logic.graphic.flow.param.Orientation.HORIZONTAL = Horizontal
 com.top_logic.graphic.flow.param.Orientation.VERTICAL = Vertikal
-com.top_logic.graphic.flow.param.SpaceDistribution = Raumverteilung
-com.top_logic.graphic.flow.param.SpaceDistribution.NONE = Keine
-com.top_logic.graphic.flow.param.SpaceDistribution.STRETCH_CONTENT = Inhalt strecken
-com.top_logic.graphic.flow.param.SpaceDistribution.STRETCH_GAP = Lücke dehnen
-com.top_logic.graphic.flow.param.VAlign = V ausrichten
-com.top_logic.graphic.flow.param.VAlign.BOTTOM = Unten
-com.top_logic.graphic.flow.param.VAlign.CENTER = Zentrum
-com.top_logic.graphic.flow.param.VAlign.STRETCH = Dehnen
-com.top_logic.graphic.flow.param.VAlign.TOP = Top
