--- a/com.top_logic.graphic.blocks/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.graphic.blocks/src/main/java/META-INF/messages_en.properties
@@ -50,6 +50,8 @@ com.top_logic.graphic.flow.data.Widget.TypeKind.ALIGN = Align
 com.top_logic.graphic.flow.data.Widget.TypeKind.ALIGN.tooltip = Type literal for <i>align</i>.
 com.top_logic.graphic.flow.data.Widget.TypeKind.BORDER = Border
 com.top_logic.graphic.flow.data.Widget.TypeKind.BORDER.tooltip = Type literal for <i>border</i>.
+com.top_logic.graphic.flow.data.Widget.TypeKind.COMPASS_LAYOUT = Compass layout
+com.top_logic.graphic.flow.data.Widget.TypeKind.COMPASS_LAYOUT.tooltip = Type literal for <i>compass layout</i>.
 com.top_logic.graphic.flow.data.Widget.TypeKind.EMPTY = Empty
 com.top_logic.graphic.flow.data.Widget.TypeKind.EMPTY.tooltip = Type literal for <i>empty</i>.
 com.top_logic.graphic.flow.data.Widget.TypeKind.FILL = Fill
@@ -66,48 +68,6 @@ com.top_logic.graphic.flow.data.Widget.TypeKind.TEXT = Text
 com.top_logic.graphic.flow.data.Widget.TypeKind.TEXT.tooltip = Type literal for <i>text</i>.
 com.top_logic.graphic.flow.data.Widget.TypeKind.VERTICAL_LAYOUT = Vertical layout
 com.top_logic.graphic.flow.data.Widget.TypeKind.VERTICAL_LAYOUT.tooltip = Type literal for <i>vertical layout</i>.
-com.top_logic.graphic.flow.param.HAlign = H align
-com.top_logic.graphic.flow.param.HAlign.CENTER = Center
-com.top_logic.graphic.flow.param.HAlign.LEFT = Left
-com.top_logic.graphic.flow.param.HAlign.RIGHT = Right
-com.top_logic.graphic.flow.param.HAlign.STRETCH = Stretch
-com.top_logic.graphic.flow.param.ImageAlign = Image align
-com.top_logic.graphic.flow.param.ImageAlign.none = None
-com.top_logic.graphic.flow.param.ImageAlign.none.tooltip = Does not force uniform scaling. Scale the graphic content of the given element non-uniformly if necessary such that the element's bounding box exactly matches the viewport rectangle. Note that if <code>align</code> is none, then the optional <code>meetOrSlice</code> value is ignored.
-com.top_logic.graphic.flow.param.ImageAlign.tooltip = The alignment value indicates whether to force uniform scaling and, if so, the alignment method to use in case the aspect ratio of the viewBox doesn't match the aspect ratio of the viewport. xMidYMid is the default value.
-com.top_logic.graphic.flow.param.ImageAlign.xMaxYMax = X maximum Y maximum
-com.top_logic.graphic.flow.param.ImageAlign.xMaxYMax.tooltip = Forces uniform scaling. Align the <code>min-x</code>+<code>width</code> of the element's viewBox with the maximum X value of the viewport. Align the <code>min-y</code>+<code>height</code> of the element's viewBox with the maximum Y value of the viewport.
-com.top_logic.graphic.flow.param.ImageAlign.xMaxYMid = X maximum Y mid
-com.top_logic.graphic.flow.param.ImageAlign.xMaxYMid.tooltip = Forces uniform scaling. Align the <code>min-x</code>+<code>width</code> of the element's viewBox with the maximum X value of the viewport. Align the midpoint Y value of the element's viewBox with the midpoint Y value of the viewport.
-com.top_logic.graphic.flow.param.ImageAlign.xMaxYMin = X maximum Y minimum
-com.top_logic.graphic.flow.param.ImageAlign.xMaxYMin.tooltip = Forces uniform scaling. Align the <code>min-x</code>+<code>width</code> of the element's viewBox with the maximum X value of the viewport. Align the <code>min-y</code> of the element's viewBox with the smallest Y value of the viewport.
-com.top_logic.graphic.flow.param.ImageAlign.xMidYMax = X mid Y maximum
-com.top_logic.graphic.flow.param.ImageAlign.xMidYMax.tooltip = Forces uniform scaling. Align the midpoint X value of the element's viewBox with the midpoint X value of the viewport. Align the <code>min-y</code>+<code>height</code> of the element's viewBox with the maximum Y value of the viewport.
-com.top_logic.graphic.flow.param.ImageAlign.xMidYMid = X mid Y mid
-com.top_logic.graphic.flow.param.ImageAlign.xMidYMid.tooltip = Forces uniform scaling. Align the midpoint X value of the element's viewBox with the midpoint X value of the viewport. Align the midpoint Y value of the element's viewBox with the midpoint Y value of the viewport. This is the default value.
-com.top_logic.graphic.flow.param.ImageAlign.xMidYMin = X mid Y minimum
-com.top_logic.graphic.flow.param.ImageAlign.xMidYMin.tooltip = Forces uniform scaling. Align the midpoint X value of the element's viewBox with the midpoint X value of the viewport. Align the <code>min-y</code> of the element's viewBox with the smallest Y value of the viewport.
-com.top_logic.graphic.flow.param.ImageAlign.xMinYMax = X minimum Y maximum
-com.top_logic.graphic.flow.param.ImageAlign.xMinYMax.tooltip = Forces uniform scaling. Align the <code>min-x</code> of the element's viewBox with the smallest X value of the viewport. Align the <code>min-y</code>+<code>height</code> of the element's viewBox with the maximum Y value of the viewport.
-com.top_logic.graphic.flow.param.ImageAlign.xMinYMid = X minimum Y mid
-com.top_logic.graphic.flow.param.ImageAlign.xMinYMid.tooltip = Forces uniform scaling. Align the <code>min-x</code> of the element's viewBox with the smallest X value of the viewport. Align the midpoint Y value of the element's viewBox with the midpoint Y value of the viewport.
-com.top_logic.graphic.flow.param.ImageAlign.xMinYMin = X minimum Y minimum
-com.top_logic.graphic.flow.param.ImageAlign.xMinYMin.tooltip = Forces uniform scaling. Align the <code>min-x</code> of the element's viewBox with the smallest X value of the viewport. Align the <code>min-y</code> of the element's viewBox with the smallest Y value of the viewport.
-com.top_logic.graphic.flow.param.ImageScale = Image scale
-com.top_logic.graphic.flow.param.ImageScale.meet = Meet
-com.top_logic.graphic.flow.param.ImageScale.meet.tooltip = Scales the graphic such that: <ul> <li>The aspect ratio is preserved.</li> <li>The entire viewBox is visible within the viewport.</li> <li>The viewBox is scaled up as much as possible, while still meeting the other criteria.</li> </ul> <p> In this case, if the aspect ratio of the graphic does not match the viewport, some of the viewport will extend beyond the bounds of the viewBox (i.e., the area into which the viewBox will draw will be smaller than the viewport). meet </p>
-com.top_logic.graphic.flow.param.ImageScale.slice = Slice
-com.top_logic.graphic.flow.param.ImageScale.slice.tooltip = Scales the graphic such that: <ul> <li>The aspect ratio is preserved.</li> <li>The entire viewport is covered by the viewBox.</li> <li>The viewBox is scaled down as much as possible, while still meeting the other criteria.</li> </ul> <p> In this case, if the aspect ratio of the viewBox does not match the viewport, some of the viewBox will extend beyond the bounds of the viewport (i.e., the area into which the viewBox will draw is larger than the viewport). slice </p>
-com.top_logic.graphic.flow.param.ImageScale.tooltip = Controls how to scale an image after alignment.
 com.top_logic.graphic.flow.param.Orientation = Orientation
 com.top_logic.graphic.flow.param.Orientation.HORIZONTAL = Horizontal
 com.top_logic.graphic.flow.param.Orientation.VERTICAL = Vertical
-com.top_logic.graphic.flow.param.SpaceDistribution = Space distribution
-com.top_logic.graphic.flow.param.SpaceDistribution.NONE = None
-com.top_logic.graphic.flow.param.SpaceDistribution.STRETCH_CONTENT = Stretch content
-com.top_logic.graphic.flow.param.SpaceDistribution.STRETCH_GAP = Stretch gap
-com.top_logic.graphic.flow.param.VAlign = V align
-com.top_logic.graphic.flow.param.VAlign.BOTTOM = Bottom
-com.top_logic.graphic.flow.param.VAlign.CENTER = Center
-com.top_logic.graphic.flow.param.VAlign.STRETCH = Stretch
-com.top_logic.graphic.flow.param.VAlign.TOP = Top
