Ticket #24649: Added tree layout (ltr).

--- a/com.top_logic.graphic.blocks/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.graphic.blocks/src/main/java/META-INF/messages_de.properties
@@ -13,6 +13,16 @@ com.top_logic.graphic.flow.data.Alignment.MIDDLE = Mitte
 com.top_logic.graphic.flow.data.Alignment.START = Start
 com.top_logic.graphic.flow.data.Alignment.STOP = Stopp
 com.top_logic.graphic.flow.data.Alignment.STRECH = Strech
+com.top_logic.graphic.flow.data.DiagramDirection = Diagramm Richtung
+com.top_logic.graphic.flow.data.DiagramDirection.BOTTOMUP = Bottomup
+com.top_logic.graphic.flow.data.DiagramDirection.BOTTOMUP.tooltip = Der Inhalt des Diagramms wird von unten nach oben angeordnet.
+com.top_logic.graphic.flow.data.DiagramDirection.LTR = Ltr
+com.top_logic.graphic.flow.data.DiagramDirection.LTR.tooltip = Der Inhalt des Diagramms ist von links nach rechts angeordnet.
+com.top_logic.graphic.flow.data.DiagramDirection.RTL = Rtl
+com.top_logic.graphic.flow.data.DiagramDirection.RTL.tooltip = Der Inhalt des Diagramms ist von rechts nach links angeordnet.
+com.top_logic.graphic.flow.data.DiagramDirection.TOPDOWN = Topdown
+com.top_logic.graphic.flow.data.DiagramDirection.TOPDOWN.tooltip = Der Inhalt des Diagramms ist von oben nach unten angeordnet.
+com.top_logic.graphic.flow.data.DiagramDirection.tooltip = Eine Layout-Richtung für ein strukturiertes Diagramm.
 com.top_logic.graphic.flow.data.ImageAlign = Bild ausrichten
 com.top_logic.graphic.flow.data.ImageAlign.NONE = Keine
 com.top_logic.graphic.flow.data.ImageAlign.NONE.tooltip = Erzwingt keine einheitliche Skalierung. Skaliert den grafischen Inhalt des angegebenen Elements bei Bedarf ungleichmäßig, so dass die Bounding Box des Elements genau dem Rechteck des Ansichtsfensters entspricht. Beachten Sie, dass der optionale Wert <code>meetOrSlice</code> ignoriert wird, wenn <code>align</code> kein Wert ist.
@@ -52,10 +62,14 @@ com.top_logic.graphic.flow.data.Widget.TypeKind.BORDER = Grenze
 com.top_logic.graphic.flow.data.Widget.TypeKind.BORDER.tooltip = Schriftzeichen für <i>Rahmen</i>.
 com.top_logic.graphic.flow.data.Widget.TypeKind.COMPASS_LAYOUT = Kompass-Layout
 com.top_logic.graphic.flow.data.Widget.TypeKind.COMPASS_LAYOUT.tooltip = Geben Sie ein Literal für das <i>Kompass-Layout</i> ein.
+com.top_logic.graphic.flow.data.Widget.TypeKind.DIAGRAM = Diagramm
+com.top_logic.graphic.flow.data.Widget.TypeKind.DIAGRAM.tooltip = Type literal für <i>Diagramm</i>.
 com.top_logic.graphic.flow.data.Widget.TypeKind.EMPTY = Leere
 com.top_logic.graphic.flow.data.Widget.TypeKind.EMPTY.tooltip = Typ literal für <i>leer</i>.
 com.top_logic.graphic.flow.data.Widget.TypeKind.FILL = Füllen Sie
 com.top_logic.graphic.flow.data.Widget.TypeKind.FILL.tooltip = Typ wörtlich für <i>Füllung</i>.
+com.top_logic.graphic.flow.data.Widget.TypeKind.FLOATING_LAYOUT = Fließendes Layout
+com.top_logic.graphic.flow.data.Widget.TypeKind.FLOATING_LAYOUT.tooltip = Typ-Literal für <i>schwebendes Layout</i>.
 com.top_logic.graphic.flow.data.Widget.TypeKind.GRID_LAYOUT = Gitternetz-Layout
 com.top_logic.graphic.flow.data.Widget.TypeKind.GRID_LAYOUT.tooltip = Schriftzeichen für das <i>Rasterlayout</i>.
 com.top_logic.graphic.flow.data.Widget.TypeKind.HORIZONTAL_LAYOUT = Horizontales Layout
@@ -66,6 +80,12 @@ com.top_logic.graphic.flow.data.Widget.TypeKind.PADDING = Polsterung
 com.top_logic.graphic.flow.data.Widget.TypeKind.PADDING.tooltip = Typ Literal für <i>Auffüllung</i>.
 com.top_logic.graphic.flow.data.Widget.TypeKind.TEXT = Text
 com.top_logic.graphic.flow.data.Widget.TypeKind.TEXT.tooltip = Geben Sie ein Literal für <i>Text</i> ein.
+com.top_logic.graphic.flow.data.Widget.TypeKind.TREE_CONNECTION = Baumverbindung
+com.top_logic.graphic.flow.data.Widget.TypeKind.TREE_CONNECTION.tooltip = Wörtliche Bezeichnung für die <i>Baumverbindung</i>.
+com.top_logic.graphic.flow.data.Widget.TypeKind.TREE_CONNECTOR = Baumverbinder
+com.top_logic.graphic.flow.data.Widget.TypeKind.TREE_CONNECTOR.tooltip = Typ wörtlich für <i>Baumverbinder</i>.
+com.top_logic.graphic.flow.data.Widget.TypeKind.TREE_LAYOUT = Baum-Layout
+com.top_logic.graphic.flow.data.Widget.TypeKind.TREE_LAYOUT.tooltip = Schriftzeichen für das <i>Baumlayout</i>.
 com.top_logic.graphic.flow.data.Widget.TypeKind.VERTICAL_LAYOUT = Vertikales Layout
 com.top_logic.graphic.flow.data.Widget.TypeKind.VERTICAL_LAYOUT.tooltip = Wörtlich für <i>vertikales Layout</i> eingeben.
 com.top_logic.graphic.flow.param.Orientation = Orientierung
