--- a/com.top_logic.graphic.blocks/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.graphic.blocks/src/main/java/META-INF/messages_en.properties
@@ -13,6 +13,16 @@ com.top_logic.graphic.flow.data.Alignment.MIDDLE = Middle
 com.top_logic.graphic.flow.data.Alignment.START = Start
 com.top_logic.graphic.flow.data.Alignment.STOP = Stop
 com.top_logic.graphic.flow.data.Alignment.STRECH = Strech
+com.top_logic.graphic.flow.data.DiagramDirection = Diagram direction
+com.top_logic.graphic.flow.data.DiagramDirection.BOTTOMUP = Bottomup
+com.top_logic.graphic.flow.data.DiagramDirection.BOTTOMUP.tooltip = Diagram contents is layouted from bottom to top.
+com.top_logic.graphic.flow.data.DiagramDirection.LTR = Ltr
+com.top_logic.graphic.flow.data.DiagramDirection.LTR.tooltip = Diagram contents is layouted from left to right.
+com.top_logic.graphic.flow.data.DiagramDirection.RTL = Rtl
+com.top_logic.graphic.flow.data.DiagramDirection.RTL.tooltip = Diagram contents is layouted from right to left.
+com.top_logic.graphic.flow.data.DiagramDirection.TOPDOWN = Topdown
+com.top_logic.graphic.flow.data.DiagramDirection.TOPDOWN.tooltip = Diagram contents is layouted from top to bottom.
+com.top_logic.graphic.flow.data.DiagramDirection.tooltip = A layout direction for a structured diagram.
 com.top_logic.graphic.flow.data.ImageAlign = Image align
 com.top_logic.graphic.flow.data.ImageAlign.NONE = None
 com.top_logic.graphic.flow.data.ImageAlign.NONE.tooltip = Does not force uniform scaling. Scale the graphic content of the given element non-uniformly if necessary such that the element's bounding box exactly matches the viewport rectangle. Note that if <code>align</code> is none, then the optional <code>meetOrSlice</code> value is ignored.
@@ -52,10 +62,14 @@ com.top_logic.graphic.flow.data.Widget.TypeKind.BORDER = Border
 com.top_logic.graphic.flow.data.Widget.TypeKind.BORDER.tooltip = Type literal for <i>border</i>.
 com.top_logic.graphic.flow.data.Widget.TypeKind.COMPASS_LAYOUT = Compass layout
 com.top_logic.graphic.flow.data.Widget.TypeKind.COMPASS_LAYOUT.tooltip = Type literal for <i>compass layout</i>.
+com.top_logic.graphic.flow.data.Widget.TypeKind.DIAGRAM = Diagram
+com.top_logic.graphic.flow.data.Widget.TypeKind.DIAGRAM.tooltip = Type literal for <i>diagram</i>.
 com.top_logic.graphic.flow.data.Widget.TypeKind.EMPTY = Empty
 com.top_logic.graphic.flow.data.Widget.TypeKind.EMPTY.tooltip = Type literal for <i>empty</i>.
 com.top_logic.graphic.flow.data.Widget.TypeKind.FILL = Fill
 com.top_logic.graphic.flow.data.Widget.TypeKind.FILL.tooltip = Type literal for <i>fill</i>.
+com.top_logic.graphic.flow.data.Widget.TypeKind.FLOATING_LAYOUT = Floating layout
+com.top_logic.graphic.flow.data.Widget.TypeKind.FLOATING_LAYOUT.tooltip = Type literal for <i>floating layout</i>.
 com.top_logic.graphic.flow.data.Widget.TypeKind.GRID_LAYOUT = Grid layout
 com.top_logic.graphic.flow.data.Widget.TypeKind.GRID_LAYOUT.tooltip = Type literal for <i>grid layout</i>.
 com.top_logic.graphic.flow.data.Widget.TypeKind.HORIZONTAL_LAYOUT = Horizontal layout
@@ -66,6 +80,12 @@ com.top_logic.graphic.flow.data.Widget.TypeKind.PADDING = Padding
 com.top_logic.graphic.flow.data.Widget.TypeKind.PADDING.tooltip = Type literal for <i>padding</i>.
 com.top_logic.graphic.flow.data.Widget.TypeKind.TEXT = Text
 com.top_logic.graphic.flow.data.Widget.TypeKind.TEXT.tooltip = Type literal for <i>text</i>.
+com.top_logic.graphic.flow.data.Widget.TypeKind.TREE_CONNECTION = Tree connection
+com.top_logic.graphic.flow.data.Widget.TypeKind.TREE_CONNECTION.tooltip = Type literal for <i>tree connection</i>.
+com.top_logic.graphic.flow.data.Widget.TypeKind.TREE_CONNECTOR = Tree connector
+com.top_logic.graphic.flow.data.Widget.TypeKind.TREE_CONNECTOR.tooltip = Type literal for <i>tree connector</i>.
+com.top_logic.graphic.flow.data.Widget.TypeKind.TREE_LAYOUT = Tree layout
+com.top_logic.graphic.flow.data.Widget.TypeKind.TREE_LAYOUT.tooltip = Type literal for <i>tree layout</i>.
 com.top_logic.graphic.flow.data.Widget.TypeKind.VERTICAL_LAYOUT = Vertical layout
 com.top_logic.graphic.flow.data.Widget.TypeKind.VERTICAL_LAYOUT.tooltip = Type literal for <i>vertical layout</i>.
 com.top_logic.graphic.flow.param.Orientation = Orientation
