Ticket #25918: Enhanced type checks in generic TL-Script methods.

--- a/com.top_logic.graphic.blocks.server/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.graphic.blocks.server/src/main/java/META-INF/messages_de.properties
@@ -1,2 +1,19 @@
+class.com.top_logic.graphic.flow.server.script.I18NConstants.ERROR_WRONG_ARGUMENT__FUN_ARG_EXPECTED_VAL = Falsches Argument für Parameter{1}" der Funktion{0}", erwartet wird ein Wert vom Typ{2}" Wert war: {3}
 com.top_logic.graphic.blocks.server.component.BlocksComponent = Blocks Komponente
 com.top_logic.graphic.blocks.server.component.BlocksComponent.tooltip = <i>Komponente</i>, die ein <i>Blockmodell</i> anzeigt.
+com.top_logic.graphic.flow.server.script.JavaScriptMethod$Builder = Erbauer
+com.top_logic.graphic.flow.server.script.JavaScriptMethod$Builder.tooltip = Erbauer der <i>Java-Scriptmethode</i>.
+com.top_logic.graphic.flow.server.script.JavaScriptMethod.Builder.Config.method = Methode
+com.top_logic.graphic.flow.server.script.JavaScriptMethod.Builder.Config.method.tooltip = Qualifizierter Name der aufzurufenden statischen Methode in der Form <code>fully.qualified.ClassName#methodName</code>
+com.top_logic.graphic.flow.server.script.ScriptConversion = Skript-Konvertierung
+com.top_logic.graphic.flow.server.script.ScriptConversion.tooltip = Annotation zum Hinzufügen eines <i>Wertkonverters</i> zu einem Methodenparameter.
+com.top_logic.graphic.flow.server.script.ScriptConversion.value = Wert
+com.top_logic.graphic.flow.server.script.ScriptConversion.value.tooltip = Die Implementierungsklasse des <i>Wertkonverters</i>.
+com.top_logic.graphic.flow.server.ui.FlowChartComponent = Komponente Flussdiagramm
+com.top_logic.graphic.flow.server.ui.FlowChartComponent.tooltip = <i>Komponente</i>, die ein Flussdiagramm anzeigt.
+com.top_logic.graphic.flow.server.ui.ScriptFlowChartBuilder = Skript-Flussdiagramm-Erbauer
+com.top_logic.graphic.flow.server.ui.ScriptFlowChartBuilder.Config.create-chart = Diagramm erstellen
+com.top_logic.graphic.flow.server.ui.ScriptFlowChartBuilder.Config.create-chart.tooltip = Funktion zur Erstellung eines Flussdiagramms für ein bestimmtes Modell.
+com.top_logic.graphic.flow.server.ui.ScriptFlowChartBuilder.Config.supports-model = Unterstützt Modell
+com.top_logic.graphic.flow.server.ui.ScriptFlowChartBuilder.Config.supports-model.tooltip = Prädikat, das entscheidet, ob ein gegebenes Modell als Flussdiagramm dargestellt werden kann.
+com.top_logic.graphic.flow.server.ui.ScriptFlowChartBuilder.tooltip = <i>Erbauer von Flussdiagrammen</i>, die mit TL-Script implementiert werden können.
