--- a/com.top_logic.graphic.blocks.server/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.graphic.blocks.server/src/main/java/META-INF/messages_en.properties
@@ -1,2 +1,19 @@
+class.com.top_logic.graphic.flow.server.script.I18NConstants.ERROR_WRONG_ARGUMENT__FUN_ARG_EXPECTED_VAL = Wrong argument to parameter "{1}" of function "{0}", expected is a value of type "{2}" value was: {3}
 com.top_logic.graphic.blocks.server.component.BlocksComponent = Blocks component
 com.top_logic.graphic.blocks.server.component.BlocksComponent.tooltip = <i>Component</i> displaying a <i>block model</i>.
+com.top_logic.graphic.flow.server.script.JavaScriptMethod$Builder = Builder
+com.top_logic.graphic.flow.server.script.JavaScriptMethod$Builder.tooltip = Builder for <i>JavaScript method</i>.
+com.top_logic.graphic.flow.server.script.JavaScriptMethod.Builder.Config.method = Method
+com.top_logic.graphic.flow.server.script.JavaScriptMethod.Builder.Config.method.tooltip = Qualified name of the static method to call in the form <code>fully.qualified.ClassName#methodName</code>
+com.top_logic.graphic.flow.server.script.ScriptConversion = Script conversion
+com.top_logic.graphic.flow.server.script.ScriptConversion.tooltip = Annotation to add a <i>value converter</i> to a method parameter.
+com.top_logic.graphic.flow.server.script.ScriptConversion.value = Value
+com.top_logic.graphic.flow.server.script.ScriptConversion.value.tooltip = The <i>value converter</i> implementation class.
+com.top_logic.graphic.flow.server.ui.FlowChartComponent = Flow chart component
+com.top_logic.graphic.flow.server.ui.FlowChartComponent.tooltip = <i>Component</i> displaying a flow chart.
+com.top_logic.graphic.flow.server.ui.ScriptFlowChartBuilder = Script flow chart builder
+com.top_logic.graphic.flow.server.ui.ScriptFlowChartBuilder.Config.create-chart = Create chart
+com.top_logic.graphic.flow.server.ui.ScriptFlowChartBuilder.Config.create-chart.tooltip = Function creating a flow chart form a given model.
+com.top_logic.graphic.flow.server.ui.ScriptFlowChartBuilder.Config.supports-model = Supports model
+com.top_logic.graphic.flow.server.ui.ScriptFlowChartBuilder.Config.supports-model.tooltip = Predicate that decides, whether a given model can be displayed as flow chart.
+com.top_logic.graphic.flow.server.ui.ScriptFlowChartBuilder.tooltip = <i>Flow chart builder</i> that can be implemented by TL-Script.
