Ticket #28593: Extracted control displaying a tri state checkbox.

--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -3355,6 +3355,14 @@ com.top_logic.layout.form.control.TextPopupControl.CP.Config.immutable = Unverän
 com.top_logic.layout.form.control.TextPopupControl.CP.Config.immutable.tooltip = Konfiguration, wenn das Textfeld unveränderlich sein soll.
 com.top_logic.layout.form.control.TextPopupControl.CP.Config.rows = Zeilen
 com.top_logic.layout.form.control.TextPopupControl.CP.Config.rows.tooltip = Zeilen des im Popup angezeigten Textfeldes.
+com.top_logic.layout.form.control.TriStateCheckboxControl$State = Status
+com.top_logic.layout.form.control.TriStateCheckboxControl$State.tooltip = <i>Enum</i>, das den Zustand dieses <i>dreistufigen Kontrollkästchens</i> darstellt.
+com.top_logic.layout.form.control.TriStateCheckboxControl.State.CHECKED = Aktiviert
+com.top_logic.layout.form.control.TriStateCheckboxControl.State.CHECKED.tooltip = Aktiviertes Kontrollkästchen.
+com.top_logic.layout.form.control.TriStateCheckboxControl.State.INDETERMINATE = Unbestimmt
+com.top_logic.layout.form.control.TriStateCheckboxControl.State.INDETERMINATE.tooltip = Unbestimmtes Kontrollkästchen.
+com.top_logic.layout.form.control.TriStateCheckboxControl.State.UNCHECKED = Deaktiviert.
+com.top_logic.layout.form.control.TriStateCheckboxControl.State.UNCHECKED.tooltip = Leeres Kontrollkästchen.
 com.top_logic.layout.form.control.WikiTextRenderer = Wiki-Text-Renderer
 com.top_logic.layout.form.control.WikiTextRenderer.Config.text-extractor = Text-Extraktor
 com.top_logic.layout.form.control.WikiTextRenderer.Config.text-extractor.tooltip = Algorithmus, der Wiki-Text aus einem Objekt extrahiert.
