--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -3355,6 +3355,14 @@ com.top_logic.layout.form.control.TextPopupControl.CP.Config.immutable = Immutab
 com.top_logic.layout.form.control.TextPopupControl.CP.Config.immutable.tooltip = Configuration if the text field should be immutable.
 com.top_logic.layout.form.control.TextPopupControl.CP.Config.rows = Rows
 com.top_logic.layout.form.control.TextPopupControl.CP.Config.rows.tooltip = Rows of the text field displayed in the pop-up.
+com.top_logic.layout.form.control.TriStateCheckboxControl$State = State
+com.top_logic.layout.form.control.TriStateCheckboxControl$State.tooltip = <i>Enum</i> representing the state of this <i>tri state checkbox control</i>.
+com.top_logic.layout.form.control.TriStateCheckboxControl.State.CHECKED = Checked
+com.top_logic.layout.form.control.TriStateCheckboxControl.State.CHECKED.tooltip = Checked checkbox.
+com.top_logic.layout.form.control.TriStateCheckboxControl.State.INDETERMINATE = Indeterminate
+com.top_logic.layout.form.control.TriStateCheckboxControl.State.INDETERMINATE.tooltip = Indeterminate checkbox.
+com.top_logic.layout.form.control.TriStateCheckboxControl.State.UNCHECKED = Unchecked
+com.top_logic.layout.form.control.TriStateCheckboxControl.State.UNCHECKED.tooltip = Empty checkbox.
 com.top_logic.layout.form.control.WikiTextRenderer = Wiki text renderer
 com.top_logic.layout.form.control.WikiTextRenderer.Config.text-extractor = Text extractor
 com.top_logic.layout.form.control.WikiTextRenderer.Config.text-extractor.tooltip = Algorithm extracting wiki text from an object.
