Ticket #24649: Added starting point for selectable areas.

--- a/com.top_logic.graphic.blocks/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.graphic.blocks/src/main/java/META-INF/messages_de.properties
@@ -78,6 +78,8 @@ com.top_logic.graphic.flow.data.Widget.TypeKind.IMAGE = Bild
 com.top_logic.graphic.flow.data.Widget.TypeKind.IMAGE.tooltip = Schriftzeichen für <i>Bild</i>.
 com.top_logic.graphic.flow.data.Widget.TypeKind.PADDING = Polsterung
 com.top_logic.graphic.flow.data.Widget.TypeKind.PADDING.tooltip = Typ Literal für <i>Auffüllung</i>.
+com.top_logic.graphic.flow.data.Widget.TypeKind.SELECTABLE_BOX = Wählbares Feld
+com.top_logic.graphic.flow.data.Widget.TypeKind.SELECTABLE_BOX.tooltip = Schriftzeichen für <i>auswählbares Feld</i>.
 com.top_logic.graphic.flow.data.Widget.TypeKind.TEXT = Text
 com.top_logic.graphic.flow.data.Widget.TypeKind.TEXT.tooltip = Geben Sie ein Literal für <i>Text</i> ein.
 com.top_logic.graphic.flow.data.Widget.TypeKind.TREE_CONNECTION = Baumverbindung
