--- a/com.top_logic.graphic.blocks/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.graphic.blocks/src/main/java/META-INF/messages_en.properties
@@ -78,6 +78,8 @@ com.top_logic.graphic.flow.data.Widget.TypeKind.IMAGE = Image
 com.top_logic.graphic.flow.data.Widget.TypeKind.IMAGE.tooltip = Type literal for <i>image</i>.
 com.top_logic.graphic.flow.data.Widget.TypeKind.PADDING = Padding
 com.top_logic.graphic.flow.data.Widget.TypeKind.PADDING.tooltip = Type literal for <i>padding</i>.
+com.top_logic.graphic.flow.data.Widget.TypeKind.SELECTABLE_BOX = Selectable box
+com.top_logic.graphic.flow.data.Widget.TypeKind.SELECTABLE_BOX.tooltip = Type literal for <i>selectable box</i>.
 com.top_logic.graphic.flow.data.Widget.TypeKind.TEXT = Text
 com.top_logic.graphic.flow.data.Widget.TypeKind.TEXT.tooltip = Type literal for <i>text</i>.
 com.top_logic.graphic.flow.data.Widget.TypeKind.TREE_CONNECTION = Tree connection
