--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -6398,6 +6398,8 @@ com.top_logic.mig.html.DefaultSelectionModelFactory.Config.filter = Filter
 com.top_logic.mig.html.DefaultSelectionModelFactory.Config.filter.tooltip = Gibt den Auswahlfilter für das erstellte <i>Auswahlmodell</i> zurück.
 com.top_logic.mig.html.DefaultSelectionModelFactory.Config.multiple = Mehrere
 com.top_logic.mig.html.DefaultSelectionModelFactory.Config.multiple.tooltip = Ob das angelegte <i>Selektionsmodell</i> Mehrfachselektion unterstützen muss.
+com.top_logic.mig.html.DefaultSelectionModelFactory.Config.tree-selection = Baumauswahl
+com.top_logic.mig.html.DefaultSelectionModelFactory.Config.tree-selection.tooltip = Ob das erstellte <i>Selektionsmodell</i> die Baumselektion unterstützt, d.h. wenn ein Knoten in einem Baum selektiert wird, bedeutet dies, dass alle Kinder selektiert werden.
 com.top_logic.mig.html.DefaultSelectionModelFactory.tooltip = <i>Auswahlmodellfabrik</i>, die "Standard"<i>-Auswahlmodelle</i> erstellt.
 com.top_logic.mig.html.FilteringListModelBuilder = Filterliste Modellbauer
 com.top_logic.mig.html.FilteringListModelBuilder.Config.filter = Filter
@@ -6451,6 +6453,14 @@ com.top_logic.mig.html.SelectionNaming$Name = Name
 com.top_logic.mig.html.SelectionNaming$Name.tooltip = Name der Auswahl eines <i>Auswahlmodells</i>
 com.top_logic.mig.html.SelectionNaming.Name.selection-model = Auswahl-Modell
 com.top_logic.mig.html.SelectionNaming.Name.selection-model.tooltip = Name des <i>Selektionsmodells</i>.
+com.top_logic.mig.html.TriState = Tri-State
+com.top_logic.mig.html.TriState.INDETERMINATE = Unbestimmt
+com.top_logic.mig.html.TriState.INDETERMINATE.tooltip = Darstellung eines unbestimmten Elements
+com.top_logic.mig.html.TriState.NOT_SELECTED = Nicht ausgewählt
+com.top_logic.mig.html.TriState.NOT_SELECTED.tooltip = Darstellung eines nicht ausgewählten Elements.
+com.top_logic.mig.html.TriState.SELECTED = Ausgewählt
+com.top_logic.mig.html.TriState.SELECTED.tooltip = Darstellung eines ausgewählten Elements.
+com.top_logic.mig.html.TriState.tooltip = <i>Enum</i>, das den Auswahlstatus einer Auswahl in einem <i>Baumauswahlmodell</i> darstellt.
 com.top_logic.mig.html.layout.AbstractWindowInfo.createOpenerButtons = Öffner-Schaltflächen erstellen
 com.top_logic.mig.html.layout.AbstractWindowInfo.createOpenerButtons.tooltip = Ob der <i>Open-Handler</i> als Schaltfläche sichtbar sein soll. <p> Wenn der Wert <code>false</code> ist, kann der Dialog vom Benutzer nicht direkt geöffnet werden. In diesem Fall muss in einer anderen Komponente ein Open-Handler konfiguriert werden, um den Dialog zu öffnen. </p>
 com.top_logic.mig.html.layout.AbstractWindowInfo.disabledImage.tooltip = Das Symbol, das für den Öffnungsbefehl verwendet werden soll, wenn der Dialog nicht geöffnet werden kann.
